2018-12-23  Daniel Hawkins
    * common/links.c: Better utilize the calloc function to set the dynamic allocated
      lists to 0 as it is allocated.

2018-12-22  Daniel Hawkins
    * server/hiscore.c: Adjust i+1 followed by i++ to be ++i;

2018-10-28  Daniel Hawkins
    * common/living.c,
      common/artifact.c: Make items that have the confused flag set confuse the wielder.
    * lib/artifacts: Add a helmet of Confusion to utilize the new item-sourced confusion.

2018-10-24  Daniel Hawkins
    * common/readable.c: Make text from the messages file not get split at buffer boundaries.
    * server/player.c,
      common/living.c: Make dragon ability gain levels specified in magic field in treasurelist.

2018-10-23  Daniel Hawkins
    * common/readable.c: Add "illuminated text" as a religion book name.
    * server/c_object.c: Refactor a loop through the player's inventory to better use the op->contr->mark pointer.

2018-10-22  Daniel Hawkins
    * random_maps/style.c: Remove superfluous use of buffer and snprintf.
    * include/global.h,
      common/loader.l,
      common/init.c,
      common/arch.c: Remove ::warn_archetypes and make loader use try_find_archetype.
    * common/recipe.c: Refactor recipe creation to use calloc instead of malloc.

2018-09-24  Daniel Hawkins
    * types/Makefile.am: Add new mimic type file to build.
    * server/ob_types.c: Initialize the apply hook for mimics.
    * include/typesproto.h: Function prototype for apply hook initialization.
    * include/object.h: Add MIMIC type and update max type number.
    * types/mimic/mimic.c: Add code for MIMIC type.
    * common/item.c: Add new type to the table defined here. Make it like container.
    * random_maps/treasure.c: Make a very slim chance of a mimic replacing a chest when diffiuclty > 5.

2018-06-02  Daniel Hawkins
    * server/time.c: Simplify the code for determining the placement of a new object in change_object().

2018-05-31  Daniel Hawkins